# RMM

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: api.rs  main.rs
server/: Cargo.toml
server/src/: db.rs  ffmpeg.rs  main.rs  routes.rs
shared/: Cargo.toml
shared/src/: lib.rs
