[package]
name = "media-client"
version = "0.1.0"
edition = "2021"

[dependencies]
media-shared = { path = "../shared" }
eframe = "0.28"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rfd = "0.14"
